v5 correccion de errores en las clases