@@ -1,34 +1,58 @@
+
+import java.util.LinkedList;
+import java.util.List;
+
 // : c11:StackL.java
 // Making a stack from a LinkedList.
 // From 'Thinking in Java, 3rd ed.' (c) Bruce Eckel 2002
 // www.BruceEckel.com. See copyright notice in CopyRight.txt.
 
-import java.util.LinkedList;
+public class StackL<E> implements Stack<E> {
 
-public class StackL {
+  protected List<E> list;
+  //public Linkedlist; 
 
-  private LinkedList list = new LinkedList();
-
-  public void push(Object v) {
-    list.addFirst(v);
+  
+public List<Double> makeStack(String stackType){ 
+        List lalista = null;
+        if (stackType.equals("Single")){
+            SinglyLinkedList lista = new SinglyLinkedList();
+            return (List<Double>) lista;    
+        } else
+        if (stackType.equals("Double")){
+            DoublyLinkedList lista = new DoublyLinkedList();
+            return (List<Double>) lista;
+        } else
+        if (stackType.equals("Circular")){
+            CircularList lista = new CircularList();
+            return (List<Double>) lista;
+        }
+         else return null;
+}  
+  public StackL() {
+      list = new LinkedList<E>();
+  }
+  
+  public void push(E v) {
+    list.add(v);
   }
 
-  public Object top() {
-    return list.getFirst();
+  public E peek() {
+    return null;
   }
 
-  public Object pop() {
-    return list.removeFirst();
+  public E pop() {
+    return list.remove(size()-1);
   }
-/*
-  public static void main(String[] args) {
-    StackL stack = new StackL();
-    for (int i = 0; i < 10; i++)
-      stack.push(new Integer(i));
-    System.out.println(stack.top());
-    System.out.println(stack.top());
-    System.out.println(stack.pop());
-    System.out.println(stack.pop());
-    System.out.println(stack.pop());
-  }*/
-} ///:~
+
+    @Override
+    public boolean empty() {
+    return list.isEmpty();
+    }
+
+    @Override
+    public int size() {
+        return list.size();
+    }
+
+} 
